fixed overflow bug with blogSuggestions

--- a/app/_component/_themeAble/blogSuggestions/blogSuggestions.css
+++ b/app/_component/_themeAble/blogSuggestions/blogSuggestions.css
@@ -2,6 +2,7 @@
     position: relative;
     display: block;
     height: auto;
+    overflow: hidden;
 }
 
 blog-suggestions-box{
@@ -36,6 +37,7 @@ blog-suggestions{
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+    max-width: 100vw;
     margin-left: -15%;
     margin-right: -15%;
     padding: 0 15% 50px 15%;
@@ -76,6 +78,12 @@ suggestions-filler{
         width: 100%;
         padding: 0 10vw;
         box-sizing: border-box;
+    }
+
+    blog-suggestions{
+        margin-left: -10vw;
+        margin-right: -10vw;
+        padding: 0 10vw 50px 10vw;
     }
 
 }
